# CIVET

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  epm-header.in
models/: Cerebellum_Ventricles_SubCortical_Mask-2009s.mnc  Cerebellum_Ventricles_SubCortical_Mask-ADNIhi.mnc  Cerebellum_Ventricles_SubCortical_Mask-IBISv24.mnc  Cerebellum_Ventricles_SubCortical_Mask-VI.mnc  Cerebellum_Ventricles_SubCortical_Mask.mnc  flip_right.xfm  hemi_left_mask.mnc  hemi_right_mask.mnc  identity.xfm  midline_mask.mnc  slide_left.xfm  slide_right.xfm
models/colin/: colin_white_mc_mask_left.txt  colin_white_mc_mask_right.txt
models/colin/AAL/: AAL_README.txt  AAL_atlas_colin_mc_hires_left.txt  AAL_atlas_colin_mc_hires_right.txt
models/colin/gyri/: surface_gyri_colin_mc_left.txt  surface_gyri_colin_mc_right.txt
models/colin/lobes/: README  surface_atlas_colin_mc_left.txt  surface_atlas_colin_mc_right.txt
models/ibis/: ibis-v24_white_sym_mask_right.txt
models/icbm/: icbm_avg_white_sym_mc_mask_left.txt
models/icbm/AAL/: AAL_README.txt  AAL_license.txt  icbm_avg_mid_mc_AAL.txt  icbm_avg_mid_mc_AAL_left.txt  icbm_avg_mid_mc_AAL_lowres.txt  icbm_avg_mid_mc_AAL_right.txt
models/icbm/DKT/: DKTatlas40.labels  README  icbm_avg_mid_mc_dkt40_left.txt  icbm_avg_mid_mc_dkt40_right.txt
models/icbm/gyri/: icbm_avg_mid_sym_mc_gyri_left.txt  icbm_avg_mid_sym_mc_gyri_right.txt
models/icbm/lobes/: README  icbm_avg_mid_sym_mc_atlas_left.txt
models/samir/: samir_white_mc_mask_left.txt  samir_white_mc_mask_right.txt
models/samir/gyri/: surface_gyri_samir_mc_left.txt  surface_gyri_samir_mc_right.txt
models/samir/lobes/: surface_atlas_samir_mc_left.txt  surface_atlas_samir_mc_right.txt
progs/: asymmetry_cortical_thickness  asymmetry_map  asymmetry_position_map  asymmetry_vbm_map  best1stepnlreg.pl  bestlinreg.pl  bestsurfreg.pl  brain_mask_qc  cerebral_volume  civet_qc  class_art  classify_qc  clean_native_scan  cortical_area_stats  cortical_mask  cortical_measurements  cortical_volume_stats  diff_civet.pl  extract_surface_feature  extract_two_hemispheres  extract_volume_feature  extract_wm_hemispheres  geom_surfreg.pl  gyrification_index  lobe_area  lobe_stats  make_asp_grid  make_asp_grid_test  mask_cortical_white_matter2  mean_curvature  multispectral_stx_registration  nuc_inorm_stage  qc_metric_from_bin_mask  remove_skull  sphere-map-stats.pl  surf_qc_image  surface-register-smartest  surface-resample2  surface_dataterm_olly  surface_fit_classify  (+11 more)
src/: Artefact.pm  CIVET.pl  CIVET_Processing_Pipeline  CIVET_Processing_Pipeline.in  CIVET_QC_Pipeline  Classify.pm  Clean_Scans.pm  Cortex_Mask.pm  Cortical_Measurements.pm  Cortical_Thickness.pm  Linear_Transforms.pm  Link_Native.pm  MRI_Image.pm  Non_Linear_Transforms.pm  Processing_Pipeline_Main.pm  Segment.pm  Skull_Masking.pm  Surface_Fit.pm  Surface_Register.pm  VBM.pm  VBM_Main.pm  VBM_Pipeline  Verify_Image.pm  average_surface_builder_mc.pl  brain_mask  pve_stage
